[package]
name = "rachl7"
version = "0.0.0"
edition = "2018"
authors = ["Cory Dodt <@>"]

[lib]
name = "_rachl7"
crate-type = ["cdylib"]
path = "src/_rachl7.rs"

[dependencies.pyo3]
version = "0.9.0"
features = ["extension-module"]

[build-dependencies]
lalrpop = "0.18.1"

[dependencies]
lalrpop-util = "0.18.1"
regex = "1"